--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title:          Tale
-description:    "Minimal Jekyll theme for storytellers"
+title:          Yoon Hye-Jun 블로그
+description:    ""
 baseurl:        ""
 url:            "https://hyejun8701.github.io"
 
