--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          Yoon Hye-Jun 블로그
+title:          Yoon Hye-Jun 기술 블로그
 description:    ""
 baseurl:        ""
 url:            "https://hyejun8701.github.io"
