--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:          Yoon Hye-Jun 기술 블로그
 description:    ""
 baseurl:        ""
-url:            "https://hyejun8701.github.io"
+url:            "https://ff2400.github.io"
 
 # Google Analytics
 google_analytics: UA—XXXXXXXX-X
